Added bootstrap to form

--- a/administration/templates/services/form_service.html
+++ b/administration/templates/services/form_service.html
@@ -1,5 +1,5 @@
-
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block title %}
     Service Register
@@ -7,10 +7,21 @@
 
 
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-        {{form_service.as_p}}
-        <button class="btn btn-primary" type="submit">Register</button>
-    </form>
+    <div class="card card-primary">
+        <div class="card-header">
+            <div class="card-title">Service register</div>
+        </div>
+        <div class="card-body">
+            <form method="post">
+                {% csrf_token %}
+                {% bootstrap_form form_service%}
+                <button class="btn btn-primary" type="submit">Register</button>
+            </form>
+
+        </div>
+       
+
+    </div>
+   
    
 {% endblock %}
