--- a/administration/templates/base.html
+++ b/administration/templates/base.html
@@ -21,6 +21,19 @@
         {% endblock %}
 
     </main>
+
+    {% block javascript %}
+        {{block.super}}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+
+        <script>
+            $(document).ready(()=>{
+
+                $('.money').mask('000,00', {reverse: true});
+            })
+        </script>
+
+    {% endblock javascript%}
     
 </body>
 
