--- a/administration/templates/adminlte/lib/_main_sidebar.html
+++ b/administration/templates/adminlte/lib/_main_sidebar.html
@@ -12,7 +12,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="{% url 'user_list' %}" class="nav-link">
             <i class="nav-icon fas fa-user-circle"></i>
             <p>Users</p>
         </a>
