Modified user fields

--- a/administration/templates/users/user_form.html
+++ b/administration/templates/users/user_form.html
@@ -31,7 +31,19 @@ User Register
                 </div>
 
             </div>
-
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        {%bootstrap_field user_form.first_name%}
+                    </div>
+                </div>
+                
+                <div class="col-md-6">
+                    <div class="form-group">
+                        {%bootstrap_field user_form.email%}
+                    </div>
+                </div>
+            </div>
 
 
             <button class="btn btn-primary" type="submit">Register</button>
