--- a/administration/templates/adminlte/lib/_main_header.html
+++ b/administration/templates/adminlte/lib/_main_header.html
@@ -1,5 +1,14 @@
 {% extends 'adminlte/lib/_main_header.html' %}
 
+
+{% block change_password_url%}
+    {% url 'change_password'%}
+{% endblock %}
+
+{% block logout_url %}
+    {% url 'logout'%}
+{% endblock %}
+
 {% block nav_bar %}
 <ul class="navbar-nav">
     <li class="nav-item">
@@ -10,6 +19,17 @@
     </li>
    
 </ul>
+    {% block nav_custom_menu %}
+        <ul class="navbar-nav ml-auto">
+            <ul class="nav navbar-nav">
+        {%block nav_dropdowns %}
+            {%block user_info %}
+                {{block.super}}
+
+            {% endblock user_info %}
+        {% endblock nav_dropdowns %}
+
+    {% endblock nav_custom_menu %}
 
 
 {% endblock nav_bar%}
